--- a/package.json
+++ b/package.json
@@ -3,19 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "build": "npx webpack --config webpack.heroku.config.js",
-    "dev": "concurrently \"npx webpack --mode development --watch\" \"nodemon index.js\"",
-    "heroku-postbuild": "npm run build"
+    "start": "node index.js"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": "18.x"
   },
-  "keywords": ["beetagged", "contacts", "networking", "facebook", "linkedin"],
-  "author": "BeeTagged Team",
-  "license": "ISC",
-  "description": "Professional networking platform with AI-powered contact management",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
@@ -24,21 +16,6 @@
     "mongoose": "^8.13.2",
     "dotenv": "^16.5.0",
     "compression": "^1.8.0",
-    "axios": "^1.9.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.30.0",
-    "prop-types": "^15.8.1",
-    "@babel/core": "^7.26.10",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3",
-    "babel-loader": "^10.0.0",
-    "webpack": "^5.99.6",
-    "webpack-cli": "^6.0.1",
-    "html-webpack-plugin": "^5.6.3",
-    "css-loader": "^7.1.2",
-    "style-loader": "^4.0.0",
-    "copy-webpack-plugin": "^13.0.0",
-    "process": "^0.11.10"
+    "axios": "^1.9.0"
   }
 }
