--- a/package.json
+++ b/package.json
@@ -9,11 +9,6 @@
     "node": "18.x"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.2",
-    "csv-parser": "^3.2.0",
-    "compression": "^1.8.0",
-    "ejs": "^3.1.9"
+    "express": "^4.18.2"
   }
 }
