--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "node": "18.x"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^1.4.5",
+    "csv-parser": "^3.2.0"
   }
 }
