--- a/package.json
+++ b/package.json
@@ -1,50 +1,19 @@
 {
-  "name": "beetagged",
+  "name": "beetagged-app",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "build": "npx webpack --mode production",
-    "dev": "concurrently \"npx webpack --mode development --watch\" \"nodemon index.js\"",
-    "heroku-postbuild": "npm run build"
+    "start": "node index.js"
   },
   "engines": {
-    "node": ">=18.0.0",
+    "node": "18.x || 20.x",
     "npm": ">=8.0.0"
   },
-  "keywords": [
-    "beetagged",
-    "contacts",
-    "networking",
-    "facebook",
-    "linkedin"
-  ],
-  "author": "BeeTagged Team",
-  "license": "ISC",
-  "description": "Professional networking platform with AI-powered contact management",
   "dependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3",
-    "axios": "^1.9.0",
-    "babel-loader": "^10.0.0",
-    "compression": "^1.8.0",
-    "copy-webpack-plugin": "^13.0.0",
-    "cors": "^2.8.5",
-    "css-loader": "^7.1.2",
-    "csv-parser": "^3.2.0",
-    "dotenv": "^16.5.0",
-    "express": "^4.18.2",
-    "html-webpack-plugin": "^5.6.3",
-    "mongoose": "^8.13.2",
-    "multer": "^1.4.5-lts.2",
-    "process": "^0.11.10",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.30.0",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.99.6",
-    "webpack-cli": "^6.0.1"
+    "express": "4.18.2",
+    "mongoose": "8.13.2",
+    "multer": "1.4.5-lts.2",
+    "csv-parser": "3.2.0",
+    "compression": "1.8.0"
   }
 }
